COP_290_Assignment1-main/static/style.css
/* style.css */

.column {
    flex: 1;
    /* padding: 20px; */
    border: 1px solid #ddd;
    /* box-sizing: border-box; */
}

.login-container {
    background-color: white;
    padding: 40px;
    border-radius: 10px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
    width: 300px;
}

.login-container h2 {
    text-align: center;
    margin-bottom: 20px;
}

.form-group {
    margin-bottom: 15px;
}

input[type="text"],
input[type="password"] {
    width: 100%;
    padding: 10px;
    border: 1px solid #ddd;
    border-radius: 5px;
    box-sizing: border-box;
}


/* Add this to your existing style.css */

.welcome-container {
    text-align: center;
    background-color: white;
    padding: 40px;
    border-radius: 10px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
    /* width: 300px; */
    margin: auto;
}

.welcome-container h1 {
    margin-bottom: 20px;
}

.logout-button {
    display: inline-block;
    padding: 10px 20px;
    background-color: #dc3545;
    color: white;
    border-radius: 5px;
    text-decoration: none;
}

.logout-button:hover {
    background-color: #c82333;
}

div.LoginInfo {
    width: 100%;
    height: 10%;
    background-color: black;
    font-size: 60px;
    text-align: right;
    color: white;
}

body {
    font-family: 'Arial', sans-serif;
    background-color: #f2f2f2;
    /* display: flex; */
    /* justify-content: center; */
    /* align-items: center; */
    /* height: 100vh; */
    margin: 0;
    padding: 0;
}

header {
    /* width : 100% ;
     */
    padding: 10px;
    text-align: center;
    height: 40%;
    /* position : relative */
}

.navbar {
    list-style-type: none;
    margin: 0;
    padding: 0;
    /* width : 100%; */
}

nav {
    height: 100%;
}

nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

nav ul li {
    display: inline;
    margin-right: 15px;
}

th.StockInfoTable {
    text-align: center;
    width: 100%;
    font-size: 22px;
}

table.StockInfoTable {
    width: 95%;
    /*! border-bottom: 5px solid #ff0101; */
    border-collapse: collapse;
    padding: 10px;
    /*! margin-left: 5px; */
    /*! margin-right: 5px; */
    margin: auto;
    margin-top: 5px;
    margin-bottom: 5px;
}

tr.StockInfoTable {

    /*! margin: 5px; */
    /*! padding: 5px; */
    border-bottom: 2px solid #d9d9d9;
    border-radius: 5px;
}
tr.StockInfoTable:hover{
    background-color: #dbdbdb;
}
td.StockInfoTableRight {

    text-align: right;
    font-size: 20px;
    padding: 10px;
    /*! border-bottom: 5px solid gray; */
    /*! border-collapse: collapse; */
    padding-left: 0px;
}

td.StockInfoTableLeft {

    text-align: left;
    margin: 5px;
    padding: 10px;
    /*! border-bottom: 5px solid gray; */
    font-size: 20px;
    /*! border-collapse: collapse; */
    padding-right: 0px;
}

/* th.StockInfoTable{

    font-size: 18px;
    /*! width: 100%; */
/* padding: 5px; */
/* } */
/* td.StockInfoTable{ */

/* padding: 5px; */
/* font-size: 16px; */
/* } */
/* table.StockInfoTable{ */
/*  */
/* width: 100%; */
/* } */
*/ #table1 {
    background: white;
    color: black;
    font-size: 10pt;
    border-collapse: collapse;
    text-align: center;
    width: 100%
}

.first {
    background: green;
    color: white;
    border: 1pt solid #757575;
    text-align: center;
}

.rows {
    background: #f2f2f2;
    color: black;
    border-bottom: 1pt solid #ddd;
    border-left: 1pt solid #757575;
    border-right: 1pt solid #757575;
}

.last {
    background: #f2f2f2;
    color: black;
    border-bottom: 1pt solid #757575;
    border-left: 1pt solid #757575;
    border-right: 1pt solifd #757575;
}

#table1 tbody tr:hover {
    background-color: #ddd;
}

#table1 tfoot tr:hover {
    background-color: #ddd;
}

#table1 tr:nth-child(even) {
    background-color: #f2f2f2;
}

main {
    display: flex;
    /* flex-wrap: wrap;
     */
    justify-content: space-between;
    /* padding: 20px; */
    height: 100vh;
}

div.StockListAndSearch {
    /* width: 20%; */
    /* height:80%; */
    background-color: #f7f7f7;
    align-items: flex-start;
    flex: 20;
    /* display: ; */
    border-right: 3px solid #eeeded;
}

/* div.GraphDiv{
    /* width:100%; */
/* height:100%; */
/* background-color: turquoise; */
/* } */
div.Graph {
    /* width:80%; */
    /* height:100%; */
    /* width : 60% ; */
    background-color: rebeccapurple;
    /* align-items: flex-start; */
    flex: 60;
    position: relative;

    /* position: relative; */

}

.buttons-over-graph {
    position: absolute;
    /* top: 15%; */
    /* left: 35%; */
    top: 0;
    left: 0;

    z-index: 2;
    text-align: center;
    align-items: flex-start;
    display: flex;
    flex-direction: column;
}

div.GraphContainer {
    /* width: 80%; */
    align-items: flex-start;
    /* display: ; */
    /* height : auto ; */
    height: 95%;
    width: 100%;
    color: white;
}


table.StockDataTable {
    border-collapse: collapse;
    border: 1px solid;
    width: 100%;
    text-align: center;
}

th.StockDataTable {
    border: 1px solid;
    background-color: #1a89ff;
}

tr.StockDataTable:nth-child(odd) {
    border: 1px solid;
    background-color: #e9f5ff;
}

tr.StockDataTable:nth-child(even) {
    border: 1px solid;
    background-color: #8accf5;
}

td.StockDataTable {
    border: 1px solid;
    padding-left: 10px;
    padding-right: 10px;
}

td.TableHeading {
    font-size: 32px;
}

table.TableHeading {
    width: 100%;
    text-align: center;
}

div.HeadingContainer {
    width: 100%;
}

div.TableContainer {
    width: 100%;
    height: 100%;
    overflow: auto;
    padding-top: 50px;
}

div.IndividualTable {
    width: 93%;
    height: 600px;
    overflow: auto;
    align-items: center;
    background-color: bisque;
    margin: 0 auto;
    padding: 20px;
    margin-top: 30px;
}

div.ListHorizontalLine {
    width: 100%;
    height: 2px;
    background-color: gray;
}

div.StockSearchDiv {
    /* display: flex; */
    /* justify-content: space-between; */
    /* width: 100%; */
    align-items: center;
}

div.StockInfo {
    /* width: 20%; */
    /* height: 100%; */
    background-color: white;
    flex: 20;

    border-left: 4px solid #f2f2f2;
}

div.right-table {
    /* display: flex; */
    /* text-align: center; */
    /* display: inline-block; */
    display: flex;
    flex-direction: column;
    text-align: center;
}

div.StockInfoTableCont {
    overflow: auto;
}

table.StockTableHeading {

    width: 100%;
    font-size: 24px;
    padding-top: 10px;
    padding-bottom: 10px;
    color: black;
}

th.StockTableHeading {}

div.StockInfoAndGraph {
    position: relative;
    height: 90%;
    display: flex;
}

input.SearchBar {
    font-size: 32px;
    /* padding: 10px; */
    /* margin: 5px; */
    /* width : 100% ; */
    /* width: 75%; */
}

p.StockItem {
    padding: 10px;
    border-left: 5px solid red;
    margin-left: 5px;
    margin-right: 10px;
    margin-top: 5px;
    background-color: white;
    border-radius: 5px;
}
table.GraphDropDown{

    /*! width: 100%; */
    /*! margin: 10px; */
    /*! margin-left: auto; */
    margin-right: auto;
    width: 100%;
    padding: 10px;
}
tr.GraphDropDown{

}
td.GraphDropDown{

}
select.GraphDropDown{

    font-size: 20px;
    width: 100%;
    padding: 5px;
}
option.GraphDropDown{

}

label.GraphDropDown{
    
    font-size: 20px;
}
div.GraphType{
    
    padding: 10px;
    padding-top: 0px;
}
label.GraphType{

    /*! width: ; */
    /*! margin: 10px; */
    padding: 10px;
    font-size: 20px;
}
input.GraphType{
    
    /*! padding: 10px; */
    margin-top: 10px;
    font-size: 25px;
    /*! height: ; */
}
button.selectedStock{
    background-color: #e1dede;
    color: black;
    width: 100%;
    font-size: 20px;
    padding: 8px;
    padding-left: 15px;
    text-align: left;
    border: none;
    border-bottom: 2px solid #e4e4e4;
}
button.unSelectedStock{
    background-color: #fff;
    width: 100%;
    font-size: 20px;
    padding: 8px;
    border: none;
    border-bottom: 2px solid #e4e4e4;
    text-align: left;
    padding-left: 15px;
}
button.stockCrossButton{
    background-color: red;
    color:white;
}
button.StockSubmitButton{
    width: 100%;
    
    padding: 10px;
    font-size: 20px;
}

